// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DismissModal disappears correctly after dismissing 1`] = `
<Modal
  hardwareAccelerated={false}
  transparent={true}
  visible={true}
>
  <View
    style={
      Object {
        "backgroundColor": "white",
        "borderRadius": 10,
        "borderWidth": 1,
        "margin": "auto",
        "width": 550,
      }
    }
  >
    <View
      style={
        Object {
          "borderBottomWidth": 1,
        }
      }
    >
      <Text
        style={
          Object {
            "alignSelf": "flex-start",
            "color": "#000",
            "fontSize": 20,
            "fontWeight": "bold",
            "lineHeight": 26,
            "marginHorizontal": 10,
            "padding": 20,
            "paddingLeft": 10,
            "textAlign": "center",
          }
        }
      >
        Title
      </Text>
    </View>
    <Text
      style={
        Object {
          "alignSelf": "flex-start",
          "color": "#000",
          "fontSize": 20,
          "lineHeight": 26,
          "marginHorizontal": 10,
          "padding": 20,
          "paddingLeft": 10,
          "textAlign": "left",
        }
      }
    >
      Description
    </Text>
    <View
      style={
        Object {
          "alignSelf": "center",
          "flexDirection": "row",
          "paddingBottom": 20,
        }
      }
    >
      <View
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "marginBottom": 16,
          }
        }
      >
        <RNGestureHandlerButton
          collapsable={false}
          exclusive={true}
          handlerTag={2}
          handlerType="NativeViewGestureHandler"
          onGestureEvent={[Function]}
          onGestureHandlerEvent={[Function]}
          onGestureHandlerStateChange={[Function]}
          onHandlerStateChange={[Function]}
          rippleColor={0}
          touchSoundDisabled={false}
        >
          <View
            accessible={true}
            collapsable={false}
            style={
              Object {
                "opacity": 1,
              }
            }
          >
            <View
              style={
                Array [
                  Object {
                    "backgroundColor": "#3742fa",
                    "borderColor": "#3742fa",
                    "borderRadius": 8,
                    "borderWidth": 1,
                    "padding": 8,
                  },
                ]
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#000",
                      "fontSize": 20,
                      "lineHeight": 26,
                      "textAlign": "left",
                    },
                    Object {
                      "textAlign": "center",
                    },
                    Object {
                      "color": "#fff",
                    },
                  ]
                }
              >
                Ok
              </Text>
            </View>
          </View>
        </RNGestureHandlerButton>
      </View>
    </View>
  </View>
</Modal>
`;

exports[`DismissModal renders correctly 1`] = `
<Modal
  hardwareAccelerated={false}
  transparent={true}
  visible={true}
>
  <View
    style={
      Object {
        "backgroundColor": "white",
        "borderRadius": 10,
        "borderWidth": 1,
        "margin": "auto",
        "width": 550,
      }
    }
  >
    <View
      style={
        Object {
          "borderBottomWidth": 1,
        }
      }
    >
      <Text
        style={
          Object {
            "alignSelf": "flex-start",
            "color": "#000",
            "fontSize": 20,
            "fontWeight": "bold",
            "lineHeight": 26,
            "marginHorizontal": 10,
            "padding": 20,
            "paddingLeft": 10,
            "textAlign": "center",
          }
        }
      >
        Title
      </Text>
    </View>
    <Text
      style={
        Object {
          "alignSelf": "flex-start",
          "color": "#000",
          "fontSize": 20,
          "lineHeight": 26,
          "marginHorizontal": 10,
          "padding": 20,
          "paddingLeft": 10,
          "textAlign": "left",
        }
      }
    >
      Description
    </Text>
    <View
      style={
        Object {
          "alignSelf": "center",
          "flexDirection": "row",
          "paddingBottom": 20,
        }
      }
    >
      <View
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "marginBottom": 16,
          }
        }
      >
        <RNGestureHandlerButton
          collapsable={false}
          exclusive={true}
          handlerTag={1}
          handlerType="NativeViewGestureHandler"
          onGestureEvent={[Function]}
          onGestureHandlerEvent={[Function]}
          onGestureHandlerStateChange={[Function]}
          onHandlerStateChange={[Function]}
          rippleColor={0}
          touchSoundDisabled={false}
        >
          <View
            accessible={true}
            collapsable={false}
            style={
              Object {
                "opacity": 1,
              }
            }
          >
            <View
              style={
                Array [
                  Object {
                    "backgroundColor": "#3742fa",
                    "borderColor": "#3742fa",
                    "borderRadius": 8,
                    "borderWidth": 1,
                    "padding": 8,
                  },
                ]
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#000",
                      "fontSize": 20,
                      "lineHeight": 26,
                      "textAlign": "left",
                    },
                    Object {
                      "textAlign": "center",
                    },
                    Object {
                      "color": "#fff",
                    },
                  ]
                }
              >
                Ok
              </Text>
            </View>
          </View>
        </RNGestureHandlerButton>
      </View>
    </View>
  </View>
</Modal>
`;
